--- a/app/src/main/res/drawable/linha.xml
+++ b/app/src/main/res/drawable/linha.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" android:shape="line">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <stroke
+        android:width="2dp"
+        android:color="#0ED1B2" />
 
+    <padding
+        android:bottom="10dp"
+        android:left="20dp"
+        android:right="10dp"
+        android:top="10dp" />
 
-</selector>
+</shape>
