--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,26 +15,50 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="426px"
-            android:layout_height="426px"
-            android:layout_marginTop="100dp"
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:layout_marginTop="110dp"
             android:src="@drawable/logo" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="260dp"
+        android:layout_margin="20dp"
+        android:background="#535353"
         android:orientation="vertical">
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="340dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="50dp"
+            android:background="@drawable/linha"
+            android:drawableEnd="@drawable/baseline_email"
+            android:hint="@string/insira_seu_email"
+            android:inputType="textEmailAddress"
+            android:maxLength="100"
+            android:textColor="#F5F5F5" />
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="340dp"
+            android:layout_height="48dp"
+            android:background="@drawable/linha"
+            android:drawableEnd="@drawable/baseline_lock"
+            android:hint="@string/insira_sua_senha"
+            android:inputType="textPassword"
+            android:maxLength="100"
+            android:textColor="#F5F5F5" />
+
 
     </LinearLayout>
 
+    <Button
+        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Entrar"
+        android:textColor="#F5F5F5"
+        android:textStyle="bold" />
 
 </LinearLayout>
