--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
             android:hint="@string/insira_seu_email"
             android:inputType="textEmailAddress"
             android:maxLength="100"
-            android:textColor="#F5F5F5" />
+            android:textColor="#06B" />
 
         <EditText
             android:layout_width="340dp"
@@ -53,12 +53,17 @@
 
     </LinearLayout>
 
-    <Button
-        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Entrar"
-        android:textColor="#F5F5F5"
-        android:textStyle="bold" />
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#535353"
+            android:text="Entrar"
+            android:textColor="#F5F5F5"
+            android:textStyle="bold" />
+    </LinearLayout>
 
 </LinearLayout>
