--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="260dp"
+        android:layout_height="190dp"
         android:layout_margin="20dp"
         android:background="#535353"
         android:orientation="vertical">
@@ -53,17 +53,16 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+
 
         <Button
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#535353"
+
             android:text="Entrar"
             android:textColor="#F5F5F5"
             android:textStyle="bold" />
     </LinearLayout>
 
-</LinearLayout>
