--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,16 +53,26 @@
 
     </LinearLayout>
 
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <Button
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#535353"
+        android:text="Entrar"
+        android:textColor="#F5F5F5"
+        android:textStyle="bold" />
 
-
-        <Button
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#535353"
-
-            android:text="Entrar"
-            android:textColor="#F5F5F5"
-            android:textStyle="bold" />
-    </LinearLayout>
+    <Button
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#535353"
+        android:text="Sair"
+        android:textColor="#F5F5F5"
+        android:layout_marginLeft="40dp"
+        android:textStyle="bold" /></LinearLayout>
+</LinearLayout>
 
